fix: fixed word breaking
If for some reason the word is too long, it will be broken by 'break-word' value

--- a/src/styles.css
+++ b/src/styles.css
@@ -151,7 +151,7 @@ body {
   height: 100%;
   justify-content: space-between;
   margin: 0.25rem auto;
-  transition: all .25s ease;
+  transition: all 0.25s ease;
 }
 .headline:hover {
   opacity: 0.4;
@@ -179,6 +179,7 @@ body {
 .headline__title {
   font-size: var(--fs-16);
   font-weight: 500;
+  word-break: break-word;
 }
 .headline__favorite {
   background-color: #f5f5f5;
